# DNG-CMake

./: .gitignore  CMAKE_4_WORKAROUND.md  CMAKE_PACKAGE_SUMMARY.md  CMakeLists.txt  INSTALL_USAGE.md  LICENSE  PREPROCESSORS.md  README.md  STATIC_LINKING_GUIDE.md
cmake/: DOCUMENTATION.md  XMPCoreStatic.pc.in  XMPFilesStatic.pc.in  XMPToolkit-config-version.cmake.in  XMPToolkit-config.cmake.in  XMPToolkit.pc.in  dng_jxl.patch  dng_sdk-config-version.cmake.in  dng_sdk-config.cmake.in  dng_sdk.cmake  dng_sdk.pc.in  dng_validate.cmake  doxygen.cfg.in  doxygen.cmake  example_usage.cmake  mainpage.dox  xmp.cmake  xmp_mainpage.dox  xmp_stream_io_cstring.patch
